--- a/src/app/myform.html
+++ b/src/app/myform.html
@@ -1,4 +1,3 @@
-
 //username //password ( 8 chart , atleast one upster . one lower case , one number and one special chartcter ) 
 
 // eight charcter 
@@ -10,8 +9,7 @@
 
 <button (click)="submit()"></button>
 </form>
-
-@Component 
+4@Component 
 
 
 myForm:FormGroup 
